classDiagram
    class Split {
        proprtion: f32
    }

    class Leaf {
        buffer: BufferRef
    }

    class RawView {
        cursor: BufferPosition
        selections: Vec BufferPosSelection
    }
        
    class FancyView {
        cursor: TextPosition
        selections: Vec TextPosSelection
        linewrap: bool
        offset: usize
    }

    class AText {
        text: String
        style_map: Vec Option usize
        styles: Vec termcolorColorSpec
    }

    Ablet o-- Prompt
    Ablet o-- SplitTree
    Ablet o-- "*" Buffer
    Ablet o-- "*" Document

    SplitTree o-- Split
    Split o-- SplitContent
    SplitContent --> Leaf
    SplitContent --> Branch
    Branch o-- Split

    Buffer o-- DocumentRef
    Buffer o-- View

    View --> RawView
    View --> FancyView

    Document o-- AText

    Prompt o-- BufferRef
    

